--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -88,6 +88,59 @@
         </div>
     </div>
 
+    <!-- Contact -->
+    <section id="contact" class="contact">
+        <div class="container">
+            <h2 class="section-title">Contact</h2>
+            <div class="contact-content">
+                <div class="contact-info">
+                    <h3 class="contact-title">Get in Touch</h3>
+                    <div class="contact-item">
+                        <span class="contact-label">Studio Address</span>
+                        <p>123 Atelier Street<br>Fashion District<br>New York, NY 10001</p>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-label">Email</span>
+                        <p>studio@ivankaraykova.com</p>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-label">Phone</span>
+                        <p>+1 (212) 555-0123</p>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-label">Hours</span>
+                        <p>Monday–Friday: 10am–6pm<br>Saturday: By appointment only<br>Sunday: Closed</p>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <h3 class="contact-title">Send a Message</h3>
+                    <form>
+                        <div class="form-group">
+                            <input type="text" class="form-control" placeholder="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" class="form-control" placeholder="Email" required>
+                        </div>
+                        <div class="form-group">
+                            <select class="form-control" required>
+                                <option value="" disabled selected>Inquiry Type</option>
+                                <option value="appointment">Appointment Request</option>
+                                <option value="custom">Custom Design</option>
+                                <option value="collaboration">Collaboration</option>
+                                <option value="press">Press Inquiry</option>
+                                <option value="other">Other</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <textarea class="form-control" placeholder="Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn-submit">Send Message</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="container">
@@ -138,6 +191,17 @@
 
     <!-- Scripts -->
     <script src="../../scripts/collection-template.js"></script>
+    <script>
+        // Form submission (prevent default)
+        const form = document.querySelector('form');
+        if (form) {
+            form.addEventListener('submit', (e) => {
+                e.preventDefault();
+                alert('Thank you for your message. We will be in touch soon.');
+                form.reset();
+            });
+        }
+    </script>
 </body>
 
 </html>
