--- a/index.html
+++ b/index.html
@@ -649,7 +649,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 38</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 40</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -855,7 +855,7 @@
                   <li><a href="#">Sustainability</a></li>
                   <li><a href="#">Shipping & Returns</a></li>
                   <li><a href="#">Privacy Policy</a></li>
-                  <li><a href="#">Terms & Conditions</a></li>
+                  <li><a href="terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
                </ul>
             </div>
          </div>
