--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -77,7 +77,7 @@
     <div id="terms-content"></div>
 
     <script>
-        fetch('@terms_and_conditions.md')
+        fetch('terms_and_conditions.md')
             .then(response => response.text())
             .then(markdown => {
                 document.getElementById('terms-content').innerHTML = marked.parse(markdown);
