--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulgarian Broderie | IVANKA RAYKOVA</title>
     <link rel="stylesheet" href="../../styles/collection-template.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 </head>
 
 <body>
@@ -150,10 +151,18 @@
                     <p>Contemporary fashion design celebrating cultural heritage through traditional embroidery and
                         modern silhouettes.</p>
                     <div class="social-links">
-                        <a href="#" class="social-link">IG</a>
-                        <a href="#" class="social-link">FB</a>
-                        <a href="#" class="social-link">TW</a>
-                        <a href="#" class="social-link">PT</a>
+                        <a href="https://www.instagram.com/ivanka.atelier/" class="social-link" target="_blank"
+                            aria-label="Instagram">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a href="https://www.facebook.com/Bulgaritasdesign" class="social-link" target="_blank"
+                            aria-label="Facebook">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://www.tiktok.com/@ivanka.atelier" class="social-link" target="_blank"
+                            aria-label="TikTok">
+                            <i class="fab fa-tiktok"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="footer-col">
