--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>IVANKA RAYKOVA | Contemporary Fashion Design</title>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
    <style>
       /* Base Styles */
       :root {
@@ -468,13 +469,14 @@
       }
 
       .social-link {
-         display: inline-block;
+         display: flex;
+         align-items: center;
+         justify-content: center;
          width: 40px;
          height: 40px;
-         line-height: 40px;
-         text-align: center;
          border: 1px solid var(--secondary-color);
          transition: var(--transition);
+         font-size: 1.2rem;
       }
 
       .social-link:hover {
@@ -826,10 +828,18 @@
                <p>Contemporary fashion design celebrating cultural heritage through traditional embroidery and modern
                   silhouettes.</p>
                <div class="social-links">
-                  <a href="#" class="social-link">IG</a>
-                  <a href="#" class="social-link">FB</a>
-                  <a href="#" class="social-link">TW</a>
-                  <a href="#" class="social-link">PT</a>
+                  <a href="https://www.instagram.com/ivanka.atelier/" class="social-link" target="_blank"
+                     aria-label="Instagram">
+                     <i class="fab fa-instagram"></i>
+                  </a>
+                  <a href="https://www.facebook.com/Bulgaritasdesign" class="social-link" target="_blank"
+                     aria-label="Facebook">
+                     <i class="fab fa-facebook-f"></i>
+                  </a>
+                  <a href="https://www.tiktok.com/@ivanka.atelier" class="social-link" target="_blank"
+                     aria-label="TikTok">
+                     <i class="fab fa-tiktok"></i>
+                  </a>
                </div>
             </div>
             <div class="footer-col">
