--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -5,11 +5,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms & Conditions | IVANKA RAYKOVA</title>
-    <link rel="stylesheet" href="styles/main.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <style>
+        :root {
+            --primary-color: #f8f8f8;
+            --secondary-color: #212121;
+            --accent-color: #e0e0e0;
+            --font-main: 'Arial', sans-serif;
+            --font-secondary: 'Times New Roman', serif;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: var(--font-main);
+            color: var(--secondary-color);
+            background-color: var(--primary-color);
+            line-height: 1.6;
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+        }
+
+        h1,
+        h2,
+        h3,
+        h4 {
+            font-family: var(--font-secondary);
+            margin: 2rem 0 1rem;
+        }
+
+        h1 {
+            text-align: center;
+            margin-bottom: 3rem;
+        }
+
+        h2 {
+            border-bottom: 1px solid var(--accent-color);
+            padding-bottom: 0.5rem;
+        }
+
+        p {
+            margin-bottom: 1rem;
+        }
+
+        ul,
+        ol {
+            margin-left: 2rem;
+            margin-bottom: 1rem;
+        }
+
+        .last-updated {
+            text-align: right;
+            font-style: italic;
+            margin-top: 3rem;
+        }
+
+        @media print {
+            body {
+                padding: 1rem;
+            }
+        }
+    </style>
 </head>
 
-<body class="policy-page">
+<body>
     <div id="terms-content"></div>
 
     <script>
