--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -187,8 +187,8 @@
                     <ul class="footer-nav">
                         <li><a href="#">Sustainability</a></li>
                         <li><a href="#">Shipping & Returns</a></li>
-                        <li><a href="../../privacy-policy.html" target="_blank">Privacy Policy</a></li>
-                        <li><a href="../../terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Terms & Conditions</a></li>
                     </ul>
                 </div>
             </div>
