--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -185,10 +185,10 @@
                 <div class="footer-col">
                     <h4 class="footer-heading">Information</h4>
                     <ul class="footer-nav">
-                        <li><a href="#">Sustainability</a></li>
+                        <li><a href="../../sustainability.html" target="_blank">Sustainability</a></li>
                         <li><a href="#">Shipping & Returns</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="../../privacy-policy.html" target="_blank">Privacy Policy</a></li>
+                        <li><a href="../../terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
                     </ul>
                 </div>
             </div>
