--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 45</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 46</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -862,7 +862,7 @@
             <div class="footer-col">
                <h4 class="footer-heading">Information</h4>
                <ul class="footer-nav">
-                  <li><a href="#">Sustainability</a></li>
+                  <li><a href="sustainability.html" target="_blank">Sustainability</a></li>
                   <li><a href="#">Shipping & Returns</a></li>
                   <li><a href="privacy-policy.html" target="_blank">Privacy Policy</a></li>
                   <li><a href="terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
