--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 46</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 47</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -772,23 +772,25 @@
       <div class="container">
          <h2 class="section-title">Contact</h2>
          <div class="contact-content">
-            <div class="contact-info">
+            <div class="contact-info-centered">
                <h3 class="contact-title">Get in Touch</h3>
-               <div class="contact-item">
-                  <span class="contact-label">Studio Address</span>
-                  <p>123 Atelier Street<br>Fashion District<br>New York, NY 10001</p>
-               </div>
-               <div class="contact-item">
-                  <span class="contact-label">Email</span>
-                  <p>studio@ivankaraykova.com</p>
-               </div>
-               <div class="contact-item">
-                  <span class="contact-label">Phone</span>
-                  <p>+1 (212) 555-0123</p>
-               </div>
-               <div class="contact-item">
-                  <span class="contact-label">Hours</span>
-                  <p>Monday–Friday: 10am–6pm<br>Saturday: By appointment only<br>Sunday: Closed</p>
+               <div class="contact-details">
+                  <div class="contact-item">
+                     <span class="contact-label">Studio Address</span>
+                     <p>123 Atelier Street<br>Fashion District<br>New York, NY 10001</p>
+                  </div>
+                  <div class="contact-item">
+                     <span class="contact-label">Email</span>
+                     <p>studio@ivankaraykova.com</p>
+                  </div>
+                  <div class="contact-item">
+                     <span class="contact-label">Phone</span>
+                     <p>+1 (212) 555-0123</p>
+                  </div>
+                  <div class="contact-item">
+                     <span class="contact-label">Hours</span>
+                     <p>Monday–Friday: 10am–6pm<br>Saturday: By appointment only<br>Sunday: Closed</p>
+                  </div>
                </div>
             </div>
          </div>
