--- a/index.html
+++ b/index.html
@@ -770,15 +770,19 @@
    <!-- Contact -->
    <section id="contact" class="contact">
       <div class="container">
-         <h2 class="section-title">Contact</h2>
          <div class="contact-content">
             <div class="contact-item">
-               <span class="contact-label">Email</span>
-               <p>ivanka.raykova@yahoo.com</p>
+               <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
+                  <i class="far fa-envelope"></i>
+                  <span>ivanka.raykova@yahoo.com</span>
+               </a>
             </div>
+            <div class="contact-divider"></div>
             <div class="contact-item">
-               <span class="contact-label">Phone</span>
-               <p>+34602491270<br>+359877647641</p>
+               <a href="tel:+34602491270" class="contact-link">
+                  <i class="far fa-phone"></i>
+                  <span>+34602491270 / +359877647641</span>
+               </a>
             </div>
          </div>
       </div>
