--- a/index.html
+++ b/index.html
@@ -770,17 +770,20 @@
    <!-- Contact -->
    <section id="contact" class="contact">
       <div class="container">
+         <h2 class="contact-heading">Contact</h2>
          <div class="contact-content">
             <div class="contact-item">
+               <span class="contact-label">Email</span>
                <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
-                  <i class="far fa-envelope"></i>
+                  <i class="fas fa-envelope"></i>
                   <span>ivanka.raykova@yahoo.com</span>
                </a>
             </div>
             <div class="contact-divider"></div>
             <div class="contact-item">
+               <span class="contact-label">Phone</span>
                <a href="tel:+34602491270" class="contact-link">
-                  <i class="far fa-phone"></i>
+                  <i class="fas fa-phone"></i>
                   <span>+34602491270 / +359877647641</span>
                </a>
             </div>
