--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 48</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 49</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -782,10 +782,16 @@
             <div class="contact-divider"></div>
             <div class="contact-item">
                <span class="contact-label">Phone</span>
-               <a href="tel:+34602491270" class="contact-link">
-                  <i class="fas fa-phone"></i>
-                  <span>+34602491270 / +359877647641</span>
-               </a>
+               <div class="phone-links">
+                  <a href="tel:+34602491270" class="contact-link">
+                     <i class="fas fa-phone"></i>
+                     <span>+34602491270</span>
+                  </a>
+                  <a href="tel:+359877647641" class="contact-link">
+                     <i class="fas fa-phone"></i>
+                     <span>+359877647641</span>
+                  </a>
+               </div>
             </div>
          </div>
       </div>
