--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 50</a>
+            <a href="#" class="logo">IVANKA RAYKOVA - deploy 51</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -770,13 +770,13 @@
    <!-- Contact -->
    <section id="contact" class="contact">
       <div class="container">
-         <h2 class="contact-heading">Contact</h2>
+         <h2 class="section-title">Contact</h2>
          <div class="contact-content">
             <div class="contact-item">
                <span class="contact-label">Email</span>
                <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
                   <i class="fas fa-envelope"></i>
-                  <span>ivanka.raykova@yahoo.com</span>
+                  ivanka.raykova@yahoo.com
                </a>
             </div>
             <div class="contact-divider"></div>
@@ -785,11 +785,11 @@
                <div class="phone-links">
                   <a href="tel:+34602491270" class="contact-link">
                      <i class="fas fa-phone"></i>
-                     <span>+34602491270</span>
+                     +34602491270
                   </a>
                   <a href="tel:+359877647641" class="contact-link">
                      <i class="fas fa-phone"></i>
-                     <span>+359877647641</span>
+                     +359877647641
                   </a>
                </div>
             </div>
