--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA - deploy 51</a>
+            <a href="#" class="logo">deploy 1 - IVANKA RAYKOVA</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
