--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -94,23 +94,25 @@
         <div class="container">
             <h2 class="section-title">Contact</h2>
             <div class="contact-content">
-                <div class="contact-info">
-                    <h3 class="contact-title">Get in Touch</h3>
-                    <div class="contact-item">
-                        <span class="contact-label">Studio Address</span>
-                        <p>123 Atelier Street<br>Fashion District<br>New York, NY 10001</p>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">Email</span>
-                        <p>studio@ivankaraykova.com</p>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">Phone</span>
-                        <p>+1 (212) 555-0123</p>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">Hours</span>
-                        <p>Monday–Friday: 10am–6pm<br>Saturday: By appointment only<br>Sunday: Closed</p>
+                <div class="contact-item">
+                    <span class="contact-label">Email</span>
+                    <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
+                        <i class="fas fa-envelope"></i>
+                        ivanka.raykova@yahoo.com
+                    </a>
+                </div>
+                <div class="contact-divider"></div>
+                <div class="contact-item">
+                    <span class="contact-label">Phone</span>
+                    <div class="phone-links">
+                        <a href="tel:+34602491270" class="contact-link">
+                            <i class="fas fa-phone"></i>
+                            +34602491270
+                        </a>
+                        <a href="tel:+359877647641" class="contact-link">
+                            <i class="fas fa-phone"></i>
+                            +359877647641
+                        </a>
                     </div>
                 </div>
             </div>
@@ -161,7 +163,6 @@
                     <h4 class="footer-heading">Information</h4>
                     <ul class="footer-nav">
                         <li><a href="../../sustainability.html" target="_blank">Sustainability</a></li>
-                        <li><a href="#">Shipping & Returns</a></li>
                         <li><a href="../../privacy-policy.html" target="_blank">Privacy Policy</a></li>
                         <li><a href="../../terms-and-conditions.html" target="_blank">Terms & Conditions</a></li>
                     </ul>
