--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -92,28 +92,43 @@
     <!-- Contact -->
     <section id="contact" class="contact">
         <div class="container">
-            <h2 class="section-title">Contact</h2>
             <div class="contact-content">
-                <div class="contact-item">
-                    <span class="contact-label">Email</span>
-                    <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
-                        <i class="fas fa-envelope"></i>
-                        ivanka.raykova@yahoo.com
-                    </a>
-                </div>
-                <div class="contact-divider"></div>
-                <div class="contact-item">
-                    <span class="contact-label">Phone</span>
-                    <div class="phone-links">
-                        <a href="tel:+34602491270" class="contact-link">
-                            <i class="fas fa-phone"></i>
-                            +34602491270
-                        </a>
-                        <a href="tel:+359877647641" class="contact-link">
-                            <i class="fas fa-phone"></i>
-                            +359877647641
+                <div class="contact-info">
+                    <h2 class="contact-title">Contact</h2>
+                    <div class="contact-item">
+                        <span class="contact-label">Email</span>
+                        <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
+                            <i class="fas fa-envelope"></i>
+                            ivanka.raykova@yahoo.com
                         </a>
                     </div>
+                    <div class="contact-item">
+                        <span class="contact-label">Phone</span>
+                        <div class="phone-links">
+                            <a href="tel:+34602491270" class="contact-link">
+                                <i class="fas fa-phone"></i>
+                                +34602491270
+                            </a>
+                            <a href="tel:+359877647641" class="contact-link">
+                                <i class="fas fa-phone"></i>
+                                +359877647641
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact-form">
+                    <form>
+                        <div class="form-group">
+                            <input type="text" id="name" name="name" placeholder="Name" required>
+                        </div>
+                        <div class="form-group">
+                            <input type="email" id="email" name="email" placeholder="Email" required>
+                        </div>
+                        <div class="form-group">
+                            <textarea id="message" name="message" placeholder="Message" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Send Message</button>
+                    </form>
                 </div>
             </div>
         </div>
