--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -97,16 +97,20 @@
                 <div class="contact-item">
                     <span class="contact-label">EMAIL</span>
                     <a href="mailto:ivanka.raykova@yahoo.com" class="contact-link">
+                        <i class="fas fa-envelope"></i>
                         ivanka.raykova@yahoo.com
                     </a>
                 </div>
+                <div class="contact-divider"></div>
                 <div class="contact-item">
                     <span class="contact-label">PHONE</span>
                     <div class="phone-links">
                         <a href="tel:+34602491270" class="contact-link">
+                            <i class="fas fa-phone"></i>
                             +34602491270
                         </a>
                         <a href="tel:+359877647641" class="contact-link">
+                            <i class="fas fa-phone"></i>
                             +359877647641
                         </a>
                     </div>
