--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">deploy 8 - IVANKA RAYKOVA</a>
+            <a href="#" class="logo">update 1 - IVANKA RAYKOVA</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -735,16 +735,22 @@
             </div>
             <div class="about-text">
                <h2 class="about-title">About the Designer</h2>
-               <p>With a background in fine arts and textile design, Ivanka Raykova brings a unique perspective to
-                  contemporary fashion that honors traditional craftsmanship. Inspired by natural landscapes and
-                  cultural heritage, each piece is thoughtfully crafted to blend modern silhouettes with traditional
-                  embroidery techniques.</p>
-               <p>The IVANKA RAYKOVA label celebrates the beauty of traditional embroidery and craftsmanship while
-                  creating elegant, minimalist designs in a predominantly white and neutral color palette that allows
-                  the intricate detailing to take center stage.</p>
-               <p>Each collection reflects a commitment to preserving cultural heritage, supporting local artisans, and
-                  creating timeless pieces that connect the past with the present—designs that tell a story while
-                  embracing modern aesthetics.</p>
+               <p>From a very young age, fashion has been more than just an inspiration — it has been a way of life. My
+                  journey began with my grandfather’s sewing machine — my first encounter with the art of creation. Over
+                  time, this passion grew into a profession and a personal mission: to create fashion with soul.</p>
+               <p>After completing my education as a clothing designer and pattern maker, I began crafting unique
+                  designs, driven by my deep love for handwork and attention to detail. Each garment is made with care,
+                  precision, and a personalized approach for every client. Everything is handmade and made to order —
+                  because I believe fashion should express the unique essence of each individual.</p>
+               <p>My philosophy is clear: to preserve personal style and give every woman the freedom to express herself
+                  in the way she feels most powerful, beautiful, and confident. A woman is not defined by standard
+                  sizing — she is personality, body, preferences, and feeling. The clothes she wears should reflect all
+                  of that. Every piece I create is designed to enhance femininity without compromising comfort or
+                  individuality.</p>
+               <p>My collections reflect my commitment to sustainability, environmental responsibility, and honoring
+                  cultural heritage. Every item is crafted only after an order is placed — with the goal of reducing
+                  waste and creating timeless, meaningful fashion.</p>
+               <p>This is my world — where fashion speaks the language of your individuality.</p>
             </div>
          </div>
       </div>
