--- a/index.html
+++ b/index.html
@@ -651,7 +651,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">update 2 - IVANKA RAYKOVA</a>
+            <a href="#" class="logo">update 3 - IVANKA RAYKOVA</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
@@ -758,18 +758,89 @@
    <!-- Atelier -->
    <section id="atelier" class="atelier">
       <div class="container">
-         <h2 class="section-title">The Atelier</h2>
+         <h2 class="section-title">Atelier Services</h2>
          <div class="atelier-content">
-            <p>Located in a bright, airy space that reflects our aesthetic, our atelier serves as both design studio and
-               showroom. Here, traditional embroidery techniques meet contemporary design, with each piece carefully
-               crafted to honor cultural heritage.</p>
-            <p>We work closely with master embroiderers and artisans who specialize in traditional techniques,
-               preserving these crafts while reimagining them for modern sensibilities. Every embroidery pattern tells a
-               story and carries symbolic meaning from our cultural traditions.</p>
-            <p>Our commitment to craftsmanship extends to every aspect of production, from sourcing natural, sustainable
-               fabrics to the final hand-finished details. We welcome clients by appointment for custom consultations
-               and fittings, offering a personalized experience that connects them to the stories behind our designs.
-            </p>
+            <div class="service-section">
+               <h3>1. Custom Design / Made-to-Measure Garments</h3>
+               <p>If you're looking for a one-of-a-kind piece made exclusively for you—tailored to your style,
+                  measurements, and personality—this service is for you. We believe fashion should be personal,
+                  expressive, and deeply connected to who you are. That's why our custom design process is centered
+                  around your vision and body, with every garment handcrafted from scratch using high-quality,
+                  sustainable materials.</p>
+
+               <h4>How it works:</h4>
+               <ol>
+                  <li><strong>Send your inspiration</strong> Share a photo, sketch, or a description of the design you
+                     have in mind. Whether it's a completely original idea or a reimagined version of an existing piece,
+                     we'll bring it to life.</li>
+                  <li><strong>Style consultation</strong> Once we receive your request, we'll contact you to discuss
+                     fabric options, silhouette, color palette, finishing details, and anything else that makes the
+                     design uniquely yours. We'll guide you with suggestions that enhance your shape and reflect your
+                     individual style.</li>
+                  <li><strong>Provide your measurements</strong> For a perfect made-to-measure fit, we'll need your
+                     basic sizing: <strong>bust, waist, and hips</strong>. Depending on the style, we may request
+                     additional measurements.</li>
+                  <li><strong>Handmade with attention to detail</strong> Your garment will be custom-crafted in our
+                     ethical atelier, with each detail carefully finished by hand. We work with love, precision, and
+                     deep respect for artisanal craftsmanship.</li>
+                  <li><strong>Production & delivery</strong> Production time varies between 10–20 business days
+                     depending on the complexity of the garment. Once completed, your piece will be packaged with care
+                     and shipped directly to you.</li>
+               </ol>
+
+               <h4>Why choose custom design with us:</h4>
+               <ul>
+                  <li>100% <strong>handmade fashion</strong>, crafted especially for you</li>
+                  <li>True <strong>slow fashion</strong> approach — no mass production</li>
+                  <li>Designed with <strong>your body, comfort, and confidence</strong> in mind</li>
+                  <li>A celebration of <strong>feminine individuality</strong> and <strong>sustainable values</strong>
+                  </li>
+                  <li>Every piece is a collaboration — <strong>fashion with soul</strong></li>
+               </ul>
+
+               <p>We don't just create clothes — we create wearable stories, tailored to express who you are.</p>
+            </div>
+
+            <hr class="service-separator">
+
+            <div class="service-section">
+               <h3>2. Tailoring & Alterations</h3>
+               <p><strong>Professional adjustments and garment repair tailored to your body and lifestyle</strong><br>
+                  We believe that clothing should fit your body—not the other way around. Whether you're looking to
+                  adjust the fit of a beloved piece, refresh an old favorite, or simply feel more confident in your
+                  clothes, our tailoring and alterations service is here to help.</p>
+
+               <p>Every woman's body is unique, and we approach each garment with the respect and precision it deserves.
+                  We don't just fix clothes — we refine them to feel like they were made for you.</p>
+
+               <h4>Our services include:</h4>
+               <ul>
+                  <li><strong>Length adjustments</strong> – shortening or lengthening hems on dresses, skirts, trousers,
+                     and sleeves</li>
+                  <li><strong>Fit corrections</strong> – taking in or letting out at the waist, hips, bust, or shoulders
+                  </li>
+                  <li><strong>Zipper and button replacement</strong></li>
+                  <li><strong>Lining repairs or replacements</strong></li>
+                  <li><strong>Reshaping garments</strong> – updating the silhouette for a more flattering and modern fit
+                  </li>
+                  <li><strong>Mending and reworking</strong> – repairing tears, seams, or reviving vintage pieces</li>
+               </ul>
+
+               <h4>Why choose our alterations service:</h4>
+               <ul>
+                  <li>Work done by our experienced designer with deep understanding of <strong>cut, structure, and body
+                        shape</strong></li>
+                  <li>Precision tailoring for <strong>a flawless fit</strong></li>
+                  <li>Mindful approach aligned with <strong>slow fashion</strong> and <strong>sustainability</strong>
+                  </li>
+                  <li>Personalized service — your comfort, style, and preferences always come first</li>
+               </ul>
+
+               <p>Whether it's a small adjustment or a complete transformation, we ensure that your garments not only
+                  fit beautifully, but also feel uniquely yours.</p>
+
+               <p><strong>Bring your wardrobe back to life — one stitch at a time.</strong></p>
+            </div>
          </div>
       </div>
    </section>
