--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -61,6 +61,14 @@
         </div>
     </main>
 
+    <!-- Video Section -->
+    <div class="collection-video">
+        <video controls autoplay muted width="100%" preload="metadata" oncanplay="this.muted=false">
+            <source src="../../video.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
     <!-- Product Detail Modal -->
     <div id="product-detail" class="product-detail">
         <button id="closeDetailBtn" class="close-detail">&times;</button>
