--- a/collections/bulgarian-broderie/index.html
+++ b/collections/bulgarian-broderie/index.html
@@ -62,6 +62,16 @@
         </div>
     </main>
 
+    <!-- Video Section -->
+    <div class="collection-video">
+        <iframe width="100%" height="450"
+            src="https://www.youtube.com/embed/IGnrsP5Ec30?autoplay=1&mute=0&quality=hd1080"
+            title="Bulgarian Broderie Collection" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen>
+        </iframe>
+    </div>
+
     <!-- Product Detail Modal -->
     <div id="product-detail" class="product-detail">
         <button id="closeDetailBtn" class="close-detail">&times;</button>
