--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">update 2 - IVANKA RAYKOVA</a>
+            <a href="#" class="logo">IVANKA RAYKOVA</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
