--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>IVANKA RAYKOVA | Contemporary Fashion Design</title>
+   <link rel="icon" type="image/x-icon" href="/favicon.ico">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
    <style>
       /* Base Styles */
@@ -696,7 +697,7 @@
    <header>
       <div class="container">
          <div class="header-content">
-            <a href="#" class="logo">IVANKA RAYKOVA</a>
+            <a href="index.html" class="logo">IVANKA RAYKOVA</a>
             <!-- Desktop Navigation -->
             <nav>
                <ul class="nav-desktop">
